// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render the circle shaped button correctly 1`] = `
<button
  className="Button full only-icon sc-bdVaJa NnJoj"
  disabled={false}
  id={null}
  onClick={[Function]}
  shape="circle"
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the default button correctly 1`] = `
<button
  className="Button full only-icon sc-bdVaJa dAjomy"
  disabled={false}
  id={null}
  onClick={[Function]}
  shape="rectangle"
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the disabled button correctly 1`] = `
<button
  className="Button full disabled only-icon sc-bdVaJa dfvIum"
  disabled={true}
  id={null}
  onClick={[Function]}
  shape="rectangle"
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the ghost and disabled button correctly 1`] = `
<button
  className="Button disabled ghost only-icon sc-bdVaJa bhaCkT"
  disabled={true}
  id={null}
  onClick={[Function]}
  shape="rectangle"
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the ghost button correctly 1`] = `
<button
  className="Button ghost only-icon sc-bdVaJa iJTkZn"
  disabled={false}
  id={null}
  onClick={[Function]}
  shape="rectangle"
  type="button"
>
  <span>
    
  </span>
</button>
`;
